<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Network settings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/testnet"
            android:summary="@string/summary_testnet"
            android:title="@string/title_testnet" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/stagenet"
            android:summary="@string/summary_stagenet"
            android:title="@string/title_stagenet" />

        <EditTextPreference
            android:key="@string/p2pBindPort"
            android:summary="@string/summary_p2pBindPort"
            android:title="@string/title_p2pBindPort"
            android:numeric="integer"/>

        <EditTextPreference
            android:key="@string/rpcBindPort"
            android:summary="@string/summary_rpcBindPort"
            android:title="@string/title_rpcBindPort"
            android:numeric="integer"/>

        <EditTextPreference
            android:key="zmqBindPort"
            android:summary="@string/summary_zmqBindPort"
            android:title="@string/title_zmqBindPort"
            android:numeric="integer"/>

        <EditTextPreference
            android:key="blockSyncSize"
            android:summary="0 = adaptive"
            android:title="Bloc sync size"
            android:numeric="integer"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Nodes">
        <EditTextPreference
            android:key="@string/peerNode"
            android:summary="@string/summary_peerNode"
            android:title="@string/title_peerNode"/>

        <EditTextPreference
            android:key="@string/exclusiveNode"
            android:summary="@string/summary_exclusiveNode"
            android:title="@string/title_exclusiveNode"/>

        <EditTextPreference
            android:key="@string/priorityNode"
            android:summary="@string/summary_priorityNode"
            android:title="@string/title_priorityNode"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Bandwidth">
        <EditTextPreference
            android:key="@string/limitRate"
            android:summary="@string/summary_limitRate"
            android:title="@string/title_limitRate"
            android:numeric="integer"/>

        <EditTextPreference
            android:key="@string/limitRateDown"
            android:summary="@string/summary_limitRateDown"
            android:title="@string/title_limitRateDown"
            android:numeric="integer"/>

        <EditTextPreference
            android:key="@string/limitRateUp"
            android:summary="@string/summary_limitRateUp"
            android:title="@string/title_limitRateUp"
            android:numeric="integer"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="Peers">
        <EditTextPreference
            android:key="@string/outPeers"
            android:summary="@string/summary_outPeers"
            android:title="@string/title_outPeers"
            android:numeric="integer"/>

        <EditTextPreference
            android:key="@string/inPeers"
            android:summary="@string/summary_inPeers"
            android:title="@string/title_inPeers"
            android:numeric="integer"/>
    </PreferenceCategory>


</PreferenceScreen>